Cabal-Version:          >= 1.6
Name:                   kyotocabinet
Version:                0.1
Author:                 Francesco Mazzoli (f@mazzo.li)
Maintainer:             Francesco Mazzoli (f@mazzo.li)
Build-Type:             Simple
License:                BSD3
Build-Type:             Simple
Category:               Database
Synopsis:               Mid level bindings to Kyoto Cabinet
Tested-With:            GHC==7.0.3
Description:
  Mid level bindings to Kyoto Cabinet, plus some wrappers data type for ease of use.

source-repository head
  type:                 git
  location:             git://github.com/rostayob/kyotocabinet.git

Library
  Build-Depends:        base >= 4 && <5
                      , cereal
                      , bytestring
  GHC-Options:          -Wall
  Exposed-Modules:      Database.KyotoCabinet.ProtoHash
                      , Database.KyotoCabinet.ProtoTree
                      , Database.KyotoCabinet.Stash
                      , Database.KyotoCabinet.CacheHash
                      , Database.KyotoCabinet.CacheTree
                      , Database.KyotoCabinet.Hash
                      , Database.KyotoCabinet.Tree
                      , Database.KyotoCabinet.Dir
                      , Database.KyotoCabinet.Forest
                      , Database.KyotoCabinet.Text
  Other-Modules:        Database.KyotoCabinet.Foreign
                      , Database.KyotoCabinet.Internal
                      , Database.KyotoCabinet.Operations
  Extra-Libraries:      kyotocabinet
  Include-Dirs:         cbits
  Includes:             cbits/utils.h
  C-Sources:            cbits/utils.c
